# libreplex_fair_launch

./: .gitignore  Anchor.toml  LICENSE  package.json
programs/libreplex_fair_launch/: Cargo.toml
programs/libreplex_fair_launch/src/: lib.rs  state.rs
programs/libreplex_fair_launch/src/instructions/: mod.rs  switch_deployment_type.rs  toggle_freeze.rs
programs/libreplex_fair_launch/src/instructions/legacy/: migrate_to_hashlist.rs  mod.rs
programs/libreplex_fair_launch/src/instructions/legacy/endpoints/: migrate_to_hashlist.rs  mod.rs
programs/libreplex_fair_launch/src/instructions/legacy/logic/: mod.rs
programs/libreplex_fair_launch/src/instructions/raw/: deploy_raw.rs  initialise_raw.rs  join_raw.rs
programs/libreplex_fair_launch/src/instructions/v2/: burn_excess_spl.rs  claim_transfer_fee_as_creator.rs  initialise.rs  mod.rs  reduce_mint_count.rs  update_creators.rs  update_swap_marker.rs
programs/libreplex_fair_launch/src/instructions/v2/shared_logic/: initialise_logic.rs  mod.rs
programs/libreplex_fair_launch/src/instructions/v2/shared_logic/deploy/: deploy_token_2022_logic.rs  deploy_with_external_fungible_logic.rs  mod.rs
programs/libreplex_fair_launch/src/instructions/v2/token_2022/: deploy_token_2022.rs  deploy_with_external_fungible.rs  join.rs  mint_2022.rs  mod.rs  swap_to_fungible_2022.rs  swap_to_non_fungible_2022.rs  toggle_swap_cosigner.rs
programs/libreplex_fair_launch/tests/: fair_launch_token_22_deflationary_test.rs  fair_launch_token_22_pnft_test.rs  fair_launch_token_22_test.rs
(+3 files in other folders)
